agenda telefonica terminada

--- a/Programación orientada a objetos/ejemplo3/css/style.css
+++ b/Programación orientada a objetos/ejemplo3/css/style.css
@@ -16,5 +16,8 @@ position:absolute;
 
 }
 .container{
-    padding: 0;
+    /* padding: 0; */
+    margin-right:25px !important; 
+    margin-left:25px !important;
+    
 }
